kolejne funkcje kategorii
